--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: asuka
 description: Show Snackbars, dialogs, ModalSheets in a single provider. Simple and Clean.
-version: 0.0.1
-author:
-homepage:
+version: 1.0.0
+homepage: https://github.com/Flutterando/asuka
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
