--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: asuka
 description: Show Snackbars, dialogs, ModalSheets in a single provider. Simple and Clean.
-version: 1.0.4
+version: 2.0.0-nullsafety.0
 homepage: https://github.com/Flutterando/asuka
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
   flutter:
