--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "dart.flutterSdkPath": "/Users/jacobmoura/fvm/versions/beta"
+    "dart.flutterSdkPath": "C:\\Users\\bwolf\\fvm\\versions\\beta"
 }
