--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: asuka
 description: Show Snackbars, dialogs, ModalSheets in a single provider. Simple and Clean.
-version: 2.0.0
+version: 2.0.1
 homepage: https://github.com/Flutterando/asuka
 
 environment:
   sdk: ">=2.12.0-0 <3.0.0"
-
+  flutter: ">=2.3.0 <4.0.0"
 dependencies:
   flutter:
     sdk: flutter
