--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -32,7 +32,10 @@ dependencies:
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
+  flutter_lints:
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
 # For information on the generic Dart part of this file, see the
