--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -37,6 +37,8 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
+  flutterando_analysis: 
+    git: https://github.com/Flutterando/flutterando_analysis.git
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
