--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutterando_analysis: 
+    git: https://github.com/Flutterando/flutterando_analysis.git
   
 
 flutter:
