docs: updated readme and project description

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: asuka
-description: Show Snackbars, dialogs, ModalSheets in a single provider. Simple and Clean.
+description: Show Snackbars, dialogs, ModalSheets and more in a single provider. Simple and Clean.
 version: 2.0.1+1
 homepage: https://github.com/Flutterando/asuka
 
