--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutterando_analysis: 
-    git: https://github.com/Flutterando/flutterando_analysis.git
+  flutterando_analysis: ^0.0.1
   
 
 flutter:
