--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutterando_analysis: ^0.0.1
+  flutterando_analysis: ^0.0.1+1
   
 
 flutter:
