--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: asuka
-description: Show Snackbars, dialogs, ModalSheets in a single provider. Simple and Clean.
-version: 2.0.1
+description: Show Snackbars, dialogs, ModalSheets and more in a single provider. Simple and Clean.
+version: 2.0.1+2
 homepage: https://github.com/Flutterando/asuka
 
 environment:
-  sdk: ">=2.12.0-0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=2.3.0 <4.0.0"
 
 dependencies:    
@@ -15,6 +15,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutterando_analysis: ^0.0.1+1
   
 
 flutter:
