--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,7 +18,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.19.2 <3.0.0"
+  flutter: ">=3.7.0 <4.0.0"
 
 dependencies:
   asuka:
@@ -32,13 +33,11 @@ dependencies:
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
-  flutter_lints:
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
-  flutterando_analysis: 
-    git: https://github.com/Flutterando/flutterando_analysis.git
+  flutterando_analysis: ^0.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
