--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ version: 2.1.0
 homepage: https://github.com/Flutterando/asuka
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=2.19.2 <4.0.0'
+  flutter: '>=3.7.0 <4.0.0'
 
 dependencies:
   flutter:
