--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -18,14 +18,13 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.19.2 <4.0.0"
-  flutter: ">=3.7.0 <4.0.0"
+  sdk: '>=2.19.2 <4.0.0'
+
 dependencies:
   asuka:
     path: ../
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,7 +42,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
